force-app/main/default/objects/Game__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <description>Name of the game developer.</description>
    <inlineHelpText>Name of the game developer.</inlineHelpText>
    <label>Developer</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>