force-app/main/default/objects/Game__c/fields/Difficulty_Level__c.field-meta.xml
<CustomField>
    <fullName>Difficulty_Level__c</fullName>
    <description>Field holding the difficulty level of a game.</description>
    <inlineHelpText>Insert difficulty level of the game.</inlineHelpText>
    <label>Difficulty Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Hard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>