force-app/main/default/objects/Game__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <description>Classifies the genre of a game.</description>
    <inlineHelpText>Classifies the genre of a game.</inlineHelpText>
    <label>Genre</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Survival</fullName>
            </value>
            <value>
                <fullName>Fighting</fullName>
            </value>
            <value>
                <fullName>Puzzle</fullName>
            </value>
            <value>
                <fullName>Racing</fullName>
            </value>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>Story</fullName>
            </value>
            <value>
                <fullName>Shooter</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>