force-app/main/default/objects/Game__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <description>Tracks when the game was or will be released.</description>
    <inlineHelpText>Tracks when the game was or will be released.</inlineHelpText>
    <label>Release Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>